@@ -28,6 +28,7 @@ import au.gov.asd.tac.constellation.graph.undo.GraphEdit;
 import au.gov.asd.tac.constellation.graph.utilities.MultiValueStore;
 import au.gov.asd.tac.constellation.utilities.memory.MemoryManager;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
@@ -56,10 +57,22 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
     private static final int OUTGOING_INCOMING_3 = 4;
     private static final int ALL_7 = 5;
     private static final int INCOMING_2 = 6;
-    private final ElementStore vStore, lStore, eStore, tStore, aStore;
-    private final ListStore vertexLinks, linkTransactions, vertexTransactions, linkEdges, vertexEdges, typeAttributes;
-    private int linkHashLength, linkHashMask;
-    private int[] linkHash, linkNext, linkPrev;
+    private final ElementStore vStore;
+    private final ElementStore lStore;
+    private final ElementStore eStore;
+    private final ElementStore tStore;
+    private final ElementStore aStore;
+    private final ListStore vertexLinks;
+    private final ListStore linkTransactions;
+    private final ListStore vertexTransactions;
+    private final ListStore linkEdges;
+    private final ListStore vertexEdges;
+    private final ListStore typeAttributes;
+    private int linkHashLength;
+    private int linkHashMask;
+    private int[] linkHash;
+    private int[] linkNext;
+    private int[] linkPrev;
     private AttributeDescription[] attributeDescriptions;
     protected GraphAttribute[] attributes;
     private GraphIndexType[] attributeIndexTypes;
@@ -730,10 +743,8 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
         removeElementFromIndices(GraphElementType.VERTEX, vertex);
 
         IntHashSet index = primaryKeyIndices[GraphElementType.VERTEX.ordinal()];
-        if (index != null) {
-            if (!removedFromKeys[GraphElementType.VERTEX.ordinal()].remove(vertex)) {
-                index.remove(vertex);
-            }
+        if (index != null && !removedFromKeys[GraphElementType.VERTEX.ordinal()].remove(vertex)) {
+            index.remove(vertex);
         }
 
         vStore.remove(vertex);
@@ -809,7 +820,12 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
 
         tStore.setUID(transaction, structureModificationCounter);
 
-        final int lowVertex, highVertex, lowDirection, highDirection, sourceDirection, destinationDirection;
+        final int lowVertex;
+        final int highVertex;
+        final int lowDirection;
+        final int highDirection;
+        final int sourceDirection;
+        final int destinationDirection;
         if (sourceVertex <= destinationVertex) {
             lowVertex = sourceVertex;
             highVertex = destinationVertex;
@@ -943,10 +959,8 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
         removeElementFromIndices(GraphElementType.TRANSACTION, transaction);
 
         IntHashSet index = primaryKeyIndices[GraphElementType.TRANSACTION.ordinal()];
-        if (index != null) {
-            if (!removedFromKeys[GraphElementType.TRANSACTION.ordinal()].remove(transaction)) {
-                index.remove(transaction);
-            }
+        if (index != null && !removedFromKeys[GraphElementType.TRANSACTION.ordinal()].remove(transaction)) {
+            index.remove(transaction);
         }
 
         // Get the link that holds the transaction
@@ -1025,6 +1039,8 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
                     case FLAT:
                         lowState ^= (1 << UNDIRECTED);
                         highState ^= (1 << UNDIRECTED);
+                        break;
+                    default:
                         break;
                 }
 
@@ -1500,6 +1516,8 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
                     }
                 }
                 break;
+            default:
+                break;
         }
 
         globalModificationCounter += operationMode.getModificationIncrement();
@@ -1539,7 +1557,7 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
 
         AttributeDescription attributeDescription;
         try {
-            attributeDescription = dataType.newInstance();
+            attributeDescription = dataType.getDeclaredConstructor().newInstance();
             attributeDescription.setGraph(this);
             attributeDescription.setDefault(defaultValue);
 
@@ -1563,9 +1581,11 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
                 default:
                     throw new IllegalArgumentException("Unrecognised element type " + elementType);
             }
-        } catch (Exception e) {
+        } catch (final IllegalAccessException | IllegalArgumentException
+                | InstantiationException | NoSuchMethodException
+                | SecurityException | InvocationTargetException ex) {
             final String msg = String.format("Error creating data type for new %s attribute '%s'", elementType, label);
-            throw new IllegalStateException(msg, e);
+            throw new IllegalStateException(msg, ex);
         }
 
         ensureAttributeCapacity(aStore.getCount() + 1);
@@ -2162,6 +2182,8 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
                 case TRANSACTION:
                     removedFromKeys[elementType.ordinal()] = new ElementList(tStore);
                     break;
+                default:
+                    break;
             }
 
         } else {
@@ -2245,10 +2267,7 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
             if (getTransactionSourceVertex(element1) != getTransactionSourceVertex(element2)) {
                 return false;
             }
-            if (getTransactionDestinationVertex(element1) != getTransactionDestinationVertex(element2)) {
-                return false;
-            }
-            return true;
+            return getTransactionDestinationVertex(element1) == getTransactionDestinationVertex(element2);
         }
     }
 
@@ -2311,10 +2330,8 @@ public class StoreGraph extends LockingTarget implements GraphWriteMethods, Seri
 
     private void removeFromIndex(final int elementType, final int id) {
         IntHashSet index = primaryKeyIndices[elementType];
-        if (index != null) {
-            if (removedFromKeys[elementType].addToBack(id)) {
-                index.remove(id);
-            }
+        if (index != null && removedFromKeys[elementType].addToBack(id)) {
+            index.remove(id);
         }
     }
 
